changes to spacing

--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
             <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
             <p>416-605-6390</p>
           </div>
-          <div class="col-lg-2.5 mr-auto text-center">
+          <div class="col-lg-2 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">naomikoo1995@gmail.com</a>
+              <a href="mailto:naomikoo@gmail.com">naomikoo1995@gmail.com</a>
             </p>
           </div>
 
